# mycelium

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  REFACTOR.md  config.json.example  go.mod  go.sum  mycelium  setup.sh
benches/: network.rs
cmd/myceliium/: main.go
internal/chain/: python_bridge.go  substrate.go  verifier.go
internal/config/: config.go  env.go
internal/crypto/: signer.go  sr25519.go
internal/database/: database.go  schema.go  shard.go  sync.go
internal/identity/: identity.go
internal/metagraph/: metagraph.go  querier.go  sync.go
internal/network/: consensus.go  miner_pubsub.go  protocol.go  weighted_raft.go
internal/node/: metrics.go  node.go  ws_manager.go
internal/peer/: blacklist.go  manager.go  peer.go  validator.go
internal/protocol/: message.go  message_helpers.go  metadata.go  status.go  sync.go  types.go
internal/protocol/fb/: Message.go  message.fbs
internal/substrate/: bridge.go  client.go  client_test.go  extrinsic.go  query.go  query_test.go  types.go  types_test.go  wallet.go  wallet_test.go
internal/test/integration/: mycelium_test.go
internal/test/mocks/: mocks.go
internal/test/testutil/: README.md  assertions.go  benchmark.go  chain.go  cleanup.go  compare.go  config.go  context.go  database.go  doc.go  example_test.go  fixture.go  logging.go  metrics.go  mock.go  (+7 more)
internal/util/: convert.go  ip.go  network.go
proto/: chain.proto
proto/chain/: chain.pb.go  chain_grpc.pb.go
python/: README.md  setup.py  substrate_bridge.py
python/mycelium/: __init__.py  substrate.py
src/: error.rs  lib.rs
src/database/: config.rs  error.rs  migrations.rs  mod.rs  pool.rs  postgres.rs  query.rs  replication.rs  sqlite.rs
src/identity/: mod.rs
src/network/: cert.rs  mod.rs  peer.rs  transport.rs
src/protocol/: bytes.rs  codec.rs  message.rs  mod.rs
src/sync/: mod.rs
tests/fixtures/: ca_cert.pem  ca_key.pem  generate_certs.sh  test_cert.pem  test_key.pem
(+23 files in other folders)
